--- a/templates/update_product.html
+++ b/templates/update_product.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <form action="/products/update" method="post" enctype="multipart/form-data">
-    <fieldset><legend> Insert New Product </legend>
+    <fieldset><legend> Update Product </legend>
         <input type="hidden" name="pd_id" value="{{data.id}}">
     <div class="form-group">
         <label for="name">Product Name</label>
