--- a/templates/userLayout.html
+++ b/templates/userLayout.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<script src="static/js/main.js"></script>
 </head>
 <body>
 
@@ -32,13 +33,13 @@
   
 <div class="container">
  <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-2">
         <div>some menu here</div>
         <div>some menu here</div>
 
     </div>
 
-    <div class="col-md-9">
+    <div class="col-md-10">
 
         {% with messages = get_flashed_messages(with_categories=true) %} 
         {% if messages %}
