final submission with total amount

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -4,15 +4,16 @@
 {% endblock %}
 
 {% block content %}
-
+    <h1>Cart Items and Total Amount</h1>
     {% for prd in basket %}
     <div style="border:1px solid palevioletred; display:block width:100%">
             <div style="width:130px; display:inline-block">{{prd[0]}}</div>
             <div style="width:180px;display: inline-block;">{{prd[1]}}</div>
             <div style="width:100px;display: inline-block;">{{prd[2]}}</div>
             <div style="width:80px;display: inline-block;">{{prd[3]}}</div>
-            <div id="inc{{}}" style="width:50px;display: inline-block;">{{prd[4]}}</div>
+            <div style="width:50px;display: inline-block;">{{prd[4]}}</div>
+            <div style="width:50px;display: inline-block;">{{prd[5]}}</div>
                     </div>
     {% endfor %}
-
+    <div style="width:80%;display: block; text-align: right; font-weight: bold;">Total Amount {{tmt}}</div>
 {% endblock %}
